# iterage

./: .flake8  .gitignore  .travis.yml  LICENSE  README.md  noxfile.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: constraints.txt  tests.yml
benchmarks/: __init__.py  chunk.py  iall.py  icount.py  icount_if.py  iempty.py  repeat.py  take.py
docs/: conf.py  index.rst  reference.rst
iterage/: __init__.py  compat.py  fn.py  generate.py  iterate.py  itr.py  itr_tests.py  list.py  reduce.py  seq.py  test_iterage.py  testdocs.py  testiterage.py
iterage/benchmark/: __init__.py  chunk.py  iall.py  icount.py  icount_if.py  iempty.py  repeat.py  take.py
src/iterage/: __init__.py  _types.py  fn.py  iterate.py  itr.py  reduce.py
tests/: test_iterage.py  test_itr.py
