[tool.poetry]
name = "iterage"
version = "0.1.dev1"
description = "Yet another iterator utils lib"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/R1tschY/iterage"
repository = "https://github.com/R1tschY/iterage"
classifiers = [
    'Development Status :: 3 - Alpha',

    'Intended Audience :: Developers',
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",

    'License :: OSI Approved :: MIT License',

    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "*"
mypy = "*"
flake8 = "*"
flake8-black = "*"
flake8-import-order = "*"
flake8-bugbear = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
darglint = "*"
xdoctest = "*"
sphinx = "*"
sphinx-autodoc-typehints = "*"
coverage = { extras = ["toml"], version = "^6.2" }
pytest-cov = "^3.0.0"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["iterage"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
