[tool.poetry]
name = "iterage"
version = "0.1.dev1"
description = "Yet another iterator utils lib"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/R1tschY/iterage"
repository = "https://github.com/R1tschY/iterage"
classifiers = [
    'Development Status :: 3 - Alpha',

    'Intended Audience :: Developers',
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",

    'License :: OSI Approved :: MIT License',

    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = ">=1.4", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
mypy = "^0.910"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.11.29"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
sphinx = "^4.3.1"
sphinx-autodoc-typehints = "^1.12.0"
coverage = { extras = ["toml"], version = "^6.2" }
pytest-cov = "^3.0.0"
typeguard = ">=2.13.3"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["iterage"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
